<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/act_pin"
        android:title="@string/str_pin"
        app:actionLayout="@layout/btn_pin"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/act_arsip"
        android:icon="@drawable/ic_archive"
        app:actionLayout="@layout/btn_archive"
        android:title="@string/str_archip"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/act_delete"
        android:icon="@drawable/ic_untrash"
        android:title="@string/str_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_restore"
        android:icon="@drawable/ic_untrash"
        android:title="@string/str_restore"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_delete_fix"
        android:icon="@drawable/ic_trash"
        android:title="@string/str_delete_fix"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_share"
        android:icon="@drawable/ic_trash"
        android:title="@string/str_share"
        app:showAsAction="never"/>
</menu>